--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,8 @@
     }
   ],
   "env": {
-    "MONGODB_URI": "@mongodb-uri",
-    "JWT_SECRET": "@jwt-secret",
+    "MONGODB_URI": "mongodb+srv://admin:admin123@cluster0.zlyew.mongodb.net/movie-app?retryWrites=true&w=majority&appName=Cluster0",
+    "JWT_SECRET": "your-super-secret-jwt-key-change-this-in-production",
     "PORT": "4000"
   }
 }
