--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/client/$1"
+      "dest": "/$1"
     }
-  ],
-  "outputDirectory": "client/build"
+  ]
 }
