--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,14 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    }
-  ],
+  "buildCommand": "cd client && npm run build",
+  "outputDirectory": "client/build",
+  "installCommand": "cd client && npm install",
+  "devCommand": "cd client && npm start",
+  "framework": "create-react-app",
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "/client/build/$1"
     }
   ]
 }
