--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "s83",
+  "name": "movie-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "Movie App with React frontend and Node.js backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build"
   },
-  "keywords": [],
+  "keywords": ["movie", "app", "react", "node", "express"],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -17,7 +19,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "nodemon": "^3.0.3",
     "notyf": "^3.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
