--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,18 @@
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/client/build/static/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/client/build/favicon.ico"
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/client/build/manifest.json"
+    },
+    {
       "src": "/(.*)",
       "dest": "/client/build/index.html"
     }
