--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
   "name": "movie-app",
   "version": "1.0.0",
-  "description": "Movie App with React frontend and Node.js backend",
+  "description": "Movie App - React Frontend with Node.js Backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build"
+    "build": "cd client && npm install && npm run build",
+    "start": "cd client && npm start",
+    "dev": "cd client && npm start"
   },
   "keywords": ["movie", "app", "react", "node", "express"],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3",
-    "notyf": "^3.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
